[gd_scene load_steps=12 format=3 uid="uid://qqgiay05a8xo"]

[ext_resource type="Script" path="res://scripts/settings_layer.gd" id="1_kbjv4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d1a7e"]
bg_color = Color(0.960784, 0.960784, 0.960784, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rqroy"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b8c1n"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8kpwf"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u5nrl"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3he45"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rppjp"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gu3nh"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o3ga0"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cqdwa"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="SettingsLayer" type="CanvasLayer"]
process_mode = 2
layer = 3
visible = false
script = ExtResource("1_kbjv4")

[node name="SettingsMenu" type="Control" parent="."]
z_index = 2
layout_mode = 3
anchors_preset = 0
offset_left = 560.0
offset_top = 296.0
offset_right = 600.0
offset_bottom = 336.0

[node name="SettingsPanel" type="Panel" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 0.4
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -252.0
offset_right = 192.0
offset_bottom = 268.0
theme_override_styles/panel = SubResource("StyleBoxFlat_d1a7e")

[node name="CloseSettings" type="Button" parent="SettingsMenu"]
layout_mode = 0
offset_left = 184.0
offset_top = -232.0
offset_right = 208.0
offset_bottom = -201.0
theme_override_styles/normal = SubResource("StyleBoxFlat_rqroy")
text = "X"

[node name="Tutorial" type="Button" parent="SettingsMenu"]
layout_mode = 0
offset_left = -96.0
offset_top = -224.0
offset_right = 128.0
offset_bottom = -168.0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_b8c1n")
text = "Tutorial"

[node name="Controls" type="Button" parent="SettingsMenu"]
layout_mode = 0
offset_left = -96.0
offset_top = -160.0
offset_right = 128.0
offset_bottom = -104.0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_8kpwf")
text = "Controls"

[node name="Volume" type="Button" parent="SettingsMenu"]
layout_mode = 0
offset_left = -96.0
offset_top = -96.0
offset_right = 128.0
offset_bottom = -40.0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_u5nrl")
text = "Volume"

[node name="Difficulty" type="Button" parent="SettingsMenu"]
layout_mode = 0
offset_left = -96.0
offset_top = -32.0
offset_right = 128.0
offset_bottom = 24.0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_3he45")
text = "Difficulty"

[node name="RestartRound" type="Button" parent="SettingsMenu"]
layout_mode = 0
offset_left = -96.0
offset_top = 32.0
offset_right = 128.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_rppjp")
text = "Restart Round"

[node name="TimerMode" type="Button" parent="SettingsMenu"]
layout_mode = 0
offset_left = -96.0
offset_top = 96.0
offset_right = 128.0
offset_bottom = 152.0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_gu3nh")
text = "Timer Mode"

[node name="BackToMenu" type="Button" parent="SettingsMenu"]
layout_mode = 0
offset_left = -96.0
offset_top = 160.0
offset_right = 128.0
offset_bottom = 216.0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_o3ga0")
text = "Quit To Menu"

[node name="CloseGame" type="Button" parent="SettingsMenu"]
layout_mode = 0
offset_left = -96.0
offset_top = 224.0
offset_right = 128.0
offset_bottom = 280.0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_cqdwa")
text = "Close Game"

[connection signal="pressed" from="SettingsMenu/CloseSettings" to="." method="_on_close_settings_pressed"]
[connection signal="pressed" from="SettingsMenu/CloseGame" to="." method="_on_close_game_pressed"]
